tests/cases/vectors/errors/vector-extern-param-runtime-abi.ari
extern "C" fn take_values(values: Vec[i64]) -> c_void;

fn main() -> i64 {
  return 0;
}
